// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit tests for MonitoredServiceCategory Ensure application typee is rendered correctly 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main monitoredServiceCategory application"
  >
    <p
      class="StyledProps--font StyledProps--main categoryName"
      style="display: flex; align-items: center;"
    >
      <span
        class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-primary8"
        data-icon="dashboard"
      >
        <svg
          height="13"
          viewBox="0 0 16 16"
          width="13"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.656 2H14v4H8.656zm0 12V7.344H14V14zM2 14v-4h5.344v4zm0-5.344V2h5.344v6.656z"
            fill="#fff"
            opacity="0.691"
          />
        </svg>
      </span>
      Application
    </p>
  </div>
</div>
`;

exports[`Unit tests for MonitoredServiceCategory Ensure infra type is rendered correctly 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main monitoredServiceCategory infrastructure"
  >
    <p
      class="StyledProps--font StyledProps--main categoryName"
      style="display: flex; align-items: center;"
    >
      <span
        class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-purple500"
        data-icon="infrastructure"
      >
        <svg
          fill="currentColor"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M11.15 10.822l2.091-3.623-2.091-3.624H6.966L4.874 7.2l2.092 3.623h4.184zm2.944-4.106l-.004-.007-2.092-3.623a.98.98 0 00-.848-.49H6.966a.98.98 0 00-.848.49L4.026 6.709a.98.98 0 000 .98l2.092 3.623.007.012-.007.013-2.092 3.623a.98.98 0 000 .98l2.092 3.623a.98.98 0 00.848.49h4.184a.98.98 0 00.848-.49l2.092-3.623.01-.018h4.194a.98.98 0 00.849-.49l2.091-3.623a.98.98 0 000-.98l-2.091-3.623a.98.98 0 00-.849-.49h-4.2zM11.15 19.073l2.091-3.623-2.091-3.623H6.966L4.874 15.45l2.092 3.623h4.184zm9.236-7.754l-2.092 3.623h-4.183l-2.092-3.623 2.092-3.623h4.183l2.092 3.623z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      Infrastructure
    </p>
  </div>
</div>
`;

exports[`Unit tests for MonitoredServiceCategory Ensure null type is rendered correctly 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main"
  />
</div>
`;
